# N3B_SDR_Transceiver_FW

./: .gitignore  .gitmodules  Arduino_uSDX_Pico_FFT.ino  CMakeLists.txt  Dflash.cpp  Font.h  FreeSerifBold12pt7b.h  N3B.cpp  N3B.h  N3B_SDR_Transceiver_FW.ino  README.md  adf4360.c  adf4360.cpp  adf4360.h  debug_interface.c  debug_interface.h  display_ili9341.c  display_ili9341.h  display_tft.cpp  display_tft.h  dsp.c  dsp.cpp  dsp.h  dsp_fft.c  dsp_tim.c  font.h  font24.h  gfx.c  gfxfont.h  hardware_init.c  hardware_init.h  hmc830.cppx  hmc830.hx  hmi.c  hmi.cpp  hmi.h  ili9341.c  ili9341.h  ili934x.cpp  monitor.c  (+8 more)
Fonts/: FreeMono12pt7b.h
N3B_RX/: CMakeLists.txt  README.md  adf4360.cpp  adf4360.h  adf4360_4_prj.h  autosave_memory.h  cmake_build  fft_filter.cpp  main_rx.cpp  memory.h  plot_audio_samples_2ch.py  rx.cpp  rx_definitions.h  rx_dsp.cpp  test.c  tusb_config.h  tusb_config.h_baris  ui.cpp  ui.h  usb_audio_device.c  usb_audio_device.h  usb_descriptors.c  usb_descriptors.c_baris  usb_descriptors.h  waterfall.cpp  waterfall.h
N3B_RX/memory_loader/: memory.csv  upload_memory.py
N3B_TX/: CMakeLists.txt  CMakeLists.txt_old  adf4360.c  adf4360.h  adf4360_4_prj.h  dsp.c  dsp.h  dsp_fft.c  dsp_tim.c  fix_fft.h  hmi.c  hmi.h  i2c_fifo.h  i2c_slave.c  i2c_slave.h  lcd.c  main_n3b_tx.c  main_n3b_tx.h  monitor.c  monitor.h  n3b_main_tx.c  n3b_main_tx.h
Receiver/: CMakeLists.txt  COPYING.txt  build_all  main.cpp  main_rx.cpp  plot_audio_samples_2ch.py  receiver.cpp  receiver.h  receiver_definitions.h  receiver_dsp.cpp  receiver_dsp.h  rx.cpp  rx.h  tusb_config.h  ui.cpp  ui.h  usb_audio_device.c  usb_audio_device.h  usb_descriptors.c
lib/ili9341/: ili9341.c  ili9341.h
